--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     name="Aygerim Berdalieva's Portfolio"
     content="Aygerim Berdalieva Portfolio"
   />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
